Mixed media and favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clockology Watchface Image Viewer</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen"
-    style="background-image: url('http://84.195.205.124/images/bg.png'); background-size: cover; background-position: center;background-repeat: no-repeat">
+    style="background-image: url('https://i.ibb.co/mz97wkC/bg.png'); background-size: cover; background-position: center;background-repeat: no-repeat">
 <div class="max-w-3xl w-full px-4 md:px-6">
     <div class="overflow-hidden bg-white shadow rounded-lg">
         <div class="p-4 border-b border-gray-200">
