--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             </p>
             <label for="file" class="block text-m font-medium text-gray-700">Supported file types:</label>
             <ul class="list-disc list-inside text-sm text-gray-500">
-                <li>.watch2</li>
+                <li>.clock2</li>
             </ul>
         </div>
         <div class="p-4">
