--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,27 @@
     <title>Clockology Watchface Image Viewer</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Clockology Watchface Image Viewer - Upload or provide the URL of a Clockology watch2 file to view its contents. Extract and download images from the file.">
+    <meta name="keywords" content="Clockology, watchface, image viewer, Clockology watch2, Clockology files, watchface image extractor, Clockology tool">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Toon Van Kimmenade">
+    <meta name="language" content="English">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://clockexporter.toonvank.online">
+    <meta property="og:title" content="Clockology Watchface Image Viewer">
+    <meta property="og:description" content="Upload or provide the URL of a Clockology watch2 file to view its contents. Extract and download images from the file.">
+    <meta property="og:image" content="https://i.ibb.co/qy5qdDc/bg.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://clockexporter.toonvank.online">
+    <meta property="twitter:title" content="Clockology Watchface Image Viewer">
+    <meta property="twitter:description" content="Upload or provide the URL of a Clockology watch2 file to view its contents. Extract and download images from the file.">
+    <meta property="twitter:image" content="https://i.ibb.co/qy5qdDc/bg.png">
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen"
     style="background-image: url('https://i.ibb.co/mz97wkC/bg.png'); background-size: cover; background-position: center;background-repeat: no-repeat">
