--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <meta property="twitter:image" content="https://i.ibb.co/qy5qdDc/bg.png">
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen"
-    style="background-image: url('https://i.ibb.co/mz97wkC/bg.png'); background-size: cover; background-position: center;background-repeat: no-repeat">
+    style="background-image: url('/static/images/bg.png'); background-size: cover; background-position: center;background-repeat: no-repeat">
 <div class="max-w-3xl w-full px-4 md:px-6">
     <div class="overflow-hidden bg-white shadow rounded-lg">
         <div class="p-4 border-b border-gray-200">
