--- a/templates/index.html
+++ b/templates/index.html
@@ -35,10 +35,11 @@
         <div class="p-4 border-b border-gray-200">
             <h2 class="text-xl font-bold">🕰️ Clockology Watchface File Viewer</h2>
             <p class="text-sm text-gray-500">
-                Upload or provide the URL of a Clockology watch2 file to view its contents. <br>Clockology files are stored in an encrypted format, so this tool will extract all available images, fonts and videos from the file for you and allow you to download them. This tool is not affiliated with Clockology or Apple.
+                Upload or provide the URL of a Clockology watch2 file to view its contents. <br>Clockology files are stored in an encrypted format, so this tool will extract all available images, fonts and videos from the file for you and allow you to download them.
             </p>
             <label for="file" class="block text-m font-medium text-gray-700">Supported file types:</label>
             <ul class="list-disc list-inside text-sm text-gray-500">
+                <li>.clock</li>
                 <li>.clock2</li>
             </ul>
         </div>
