--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     style="background-image: url('/static/images/bg.png'); background-size: cover; background-position: center;background-repeat: no-repeat">
 <div class="max-w-3xl w-full px-4 md:px-6">
     <div class="overflow-hidden bg-white shadow rounded-lg">
-        <div class="p-4 border-b border-gray-200">²
+        <div class="p-4 border-b border-gray-200">
             <h1 class="text-xl font-bold">🕰️ Clockology Watchface File Viewer</h1>
             <p class="text-sm text-gray-500">
                 Upload or provide the URL of a Clockology clock and clock2 file to view its contents. <br>Clockology files are stored in an encrypted format, so this tool will extract all available images, fonts and videos from the file for you and allow you to download them.
