--- a/templates/index.html
+++ b/templates/index.html
@@ -94,8 +94,9 @@
         </div>
     </div>
     <div class="text-center mt-4 mb-4">
-        <p class="text-lg text-gray-500">2024 - Created by <a href="https://github.com/toonvank" class="text-blue-500">Toon Van Kimmenade</a></p>
-        <p class="text-g text-gray-500 italic">Not affiliated with Clockology or Apple.</p>
+        <p class="text-lg text-gray-500">2024 - Created by <a href="https://t.me/elgato337" class="text-blue-500">Toon Van Kimmenade</a></p>
+        <p class="text-lg text-gray-500">Source code available on <a href="https://github.com/toonvank/ClockologyExporterPython.git" class="text-blue-500">GitHub</a></p>
+        <br><p class="text-g text-gray-500 italic">Not affiliated with Clockology or Apple.</p>
     </div>
 </div>
 </body>
